2008-04-05  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/tarball.py: add support for makefile attribute for
	tarball modules (closes: #526316)

2008-04-05  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/config.py, jhbuild/defaults.jhbuildrc,
	jhbuild/frontends/terminal.py, jhbuild/modtypes/__init__.py,
	jhbuild/modtypes/autotools.py, jhbuild/modtypes/cmake.py,
	jhbuild/modtypes/distutils.py, jhbuild/modtypes/linux.py,
	jhbuild/modtypes/mesa.py, jhbuild/modtypes/mozillamodule.py,
	jhbuild/modtypes/perl.py, jhbuild/modtypes/tarball.py: added a new
	per-module configuration variable, module_extra_env, to set environment
	variables when executing commands for that module.

2008-04-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.24.modules: Add epiphany-webkit module, building
	trunk with the webkit backend.

2008-04-03  Marco Pesenti Gritti  <mpg@redhat.com>

	* modulesets/gnome-external-deps-2.24.modules:
	Bump liboil dep to 0.3.14 as needed by gst-plugins-base

2008-04-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.24.modules: Remove gnome-gecko-embed.

2008-04-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules: Use the gnome-2-22 branch for
	Gnome 2.24 until WebKit is an approved external dependency etc.

2008-04-02  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: Seahorse has
	branched for gnome-2-22.

2008-04-01  Rob Bradford  <rob@robster.org.uk>

	* modulesets/gnome-external-deps-2.24.modules:
	Bump liboil dep to 0.3.14 as needed by gst-plugins-base

2008-04-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* doc/C/jhbuild.xml: Describe the use of "autoreconf" in autotools
	"autogen-sh" attribute.

2008-04-01  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: Added tasque and notify-sharp.

2008-03-31  Christian Kirbach  <Christian.Kirbach@googlemail.com>
