@@ -1,3 +1,9 @@
+2008-04-05  Christophe Fergeau  <teuf@gnome.org>
+
+	* jhbuild/versioncontrol/git.py: during initial git checkout, don't try
+	to create a new branch if we already got a local branch with that name
+	during the initial git-clone.  (follow-up on #511398)
+
 2008-04-05  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/modtypes/tarball.py: add support for makefile attribute for
